--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   custom_radio_grouped_button: ^2.0.0
+  numberpicker: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
