--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   custom_radio_grouped_button: ^2.0.0
-  numberpicker: ^2.1.1
+  sizer: ^2.0.13
+  draggable_home: ^1.0.2
+  flutter_svg: ^0.22.0
+  syncfusion_flutter_calendar: ^19.2.62
+  auto_size_text: ^3.0.0-nullsafety.0
+  google_fonts: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
