--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   google_fonts: ^2.1.0
   carousel_slider: ^4.0.0
   flutter_cache_manager: ^3.1.2
+  youtube_player_flutter: ^8.0.0
+  get: ^4.3.8
+  image_picker: ^0.8.4+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
