--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_cache_manager: ^3.1.2
   youtube_player_flutter: ^8.0.0
+  responsive_grid: ^2.0.0
   get: ^4.3.8
   image_picker: ^0.8.4+1
 
